<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Talkie</string>
    <string name="remove">Remove</string>
    <string name="remove_all">Remove all</string>
    <string name="play_all">Play unread</string>
    <string name="stop_playing">Stop playing</string>
    <string name="sending">Sending</string>
    <string name="new_message_received">New message received</string>
    <string name="from">From</string>
    <string name="reply">Reply</string>
    <string name="button_talk">Talk</string>
    <string name="autorec">Auto-Record</string>
    <string name="autoplay">Auto-Play</string>
    <string name="alert_missing_daemon">The DTN daemon is not installed. You need to install it and then re-install this application. Would you like to install it now?</string>
    <string name="alert_reinstall_app">You need to re-install this application to grant necessary permissions. Would you like to do this now?</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    
    <plurals name="notification_title">
        <item quantity="zero">No new messages</item>
        <item quantity="one">New message</item>
        <item quantity="other">New messages</item>
    </plurals>
    
    <plurals name="notification_text">
        <item quantity="zero">Talkie has no new messages</item>
        <item quantity="one">Talkie has received a new message</item>
        <item quantity="other">Talkie has received new messages</item>
    </plurals>
    
    <string name="service_headset_name">Talkie Headset Mode</string>
    <string name="service_headset_desc">Push the headset button to talk</string>
    
    <string name="preferences">Preferences</string>
    <string name="headset_mode">Headset Mode</string>
    <string name="pref_notification_settings">Notifications</string>
    <string name="pref_vibrate_on_message">Vibrate</string>
    <string name="pref_vibrate_on_message_desc">Vibrate on message reception</string>
    <string name="pref_ringtone_on_message">Notification sound</string>
    <string name="pref_ringtone_on_message_desc">Choose a notification sound for incoming messages.</string>
	<string name="pref_autoplay">Auto-Play</string>
	<string name="pref_autoplay_desc">Automatically play incoming messages.</string>
	<string name="pref_autorec">Auto-Record</string>
	<string name="pref_autorec_desc">Record a message if the devices is on the ear.</string>
	<string name="pref_ptt">Push-To-Talk</string>
	<string name="pref_ptt_desc">Record the message while the button is pushed.</string>
	<string name="pref_notification">Enable notification</string>
	<string name="pref_notification_desc">Show notification if a message is received.</string>
	
	<string name="talkie_message_notification_sound_title">Talkie message</string>
</resources>